--- a/interactive_puzzle/index.html
+++ b/interactive_puzzle/index.html
@@ -3,24 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blood-Type Incompatibility Checker</title>
+  <title>Blood-Type Exchange Dashboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🩸 Blood-Type Incompatibility Checker</h1>
+  <h1>🩸 Blood-Type Exchange Dashboard</h1>
   <p>
-    This interactive demo simulates the feasibility logic of a 3-pair blood-type
-    exchange model based on ABO compatibility rules.
+    Select donor and recipient blood types for each pair, then check feasibility.
   </p>
 
-  <div id="pairs"></div>
+  <div id="canvas">
+    <svg id="arrows" width="800" height="500">
+      <defs>
+        <marker id="arrowhead" markerWidth="8" markerHeight="5" refX="7" refY="2.5" orient="auto">
+          <polygon points="0 0, 8 2.5, 0 5" fill="black"/>
+        </marker>
+      </defs>
+      <line id="line1" x1="400" y1="130" x2="250" y2="370" class="arrow"/>
+      <line id="line2" x1="250" y1="370" x2="550" y2="370" class="arrow"/>
+      <line id="line3" x1="550" y1="370" x2="400" y2="130" class="arrow"/>
+    </svg>
+
+    <div class="pair" id="pair1">
+      <h3>Pair 1</h3>
+      <div>Recipient: <select id="rec1"></select></div>
+      <div>Donor: <select id="don1"></select></div>
+    </div>
+
+    <div class="pair" id="pair2">
+      <h3>Pair 2</h3>
+      <div>Recipient: <select id="rec2"></select></div>
+      <div>Donor: <select id="don2"></select></div>
+    </div>
+
+    <div class="pair" id="pair3">
+      <h3>Pair 3</h3>
+      <div>Recipient: <select id="rec3"></select></div>
+      <div>Donor: <select id="don3"></select></div>
+    </div>
+  </div>
 
   <button id="check">Run Feasibility Check</button>
-
   <div id="result"></div>
 
   <footer>
-    <p>Created for educational purposes — GitHub Pages static version.</p>
+    <p>Static educational demo — runs fully in the browser.</p>
   </footer>
 
   <script src="script.js"></script>
