--- a/interactive_puzzle/index.html
+++ b/interactive_puzzle/index.html
@@ -19,9 +19,10 @@
           <polygon points="0 0, 8 2.5, 0 5" fill="black"/>
         </marker>
       </defs>
-      <line id="line1" x1="400" y1="130" x2="250" y2="370" class="arrow"/>
-      <line id="line2" x1="250" y1="370" x2="550" y2="370" class="arrow"/>
-      <line id="line3" x1="550" y1="370" x2="400" y2="130" class="arrow"/>
+        <line id="line1" x1="360" x2="260" y2="320" class="arrow" y1="180"></line>
+        <line id="line2" x1="330" y1="390" x2="510" y2="390" class="arrow"></line>
+        <line id="line3" x1="540" y1="320" x2="460" y2="180" class="arrow"></line>
+
     </svg>
 
     <div class="pair" id="pair1">
